--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "settings-sharelatex": "git+ssh://git@github.com:sharelatex/settings-sharelatex.git#master",
     "sequelize": "~2.0.0-beta.2",
     "wrench": "~1.5.4",
-    "smoke-test-sharelatex": "git+ssh://git@github.com:sharelatex/smoke-test-sharelatex.git#master"
+    "smoke-test-sharelatex": "git+ssh://git@github.com:sharelatex/smoke-test-sharelatex.git#master",
+    "sqlite3": "~2.2.0"
   },
   "devDependencies": {
     "mocha": "1.10.0",
