--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "James Allen <james@sharelatex.com>",
   "dependencies": {
     "async": "0.2.9",
-    "express": "3.3.1",
     "lynx": "0.0.11",
     "mkdirp": "0.3.5",
     "mysql": "2.0.0-alpha7",
@@ -16,7 +15,9 @@
     "sequelize": "~2.0.0-beta.2",
     "wrench": "~1.5.4",
     "smoke-test-sharelatex": "git+https://github.com/sharelatex/smoke-test-sharelatex.git#master",
-    "sqlite3": "~2.2.0"
+    "sqlite3": "~2.2.0",
+    "express": "^4.2.0",
+    "body-parser": "^1.2.0"
   },
   "devDependencies": {
     "mocha": "1.10.0",
