--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "smoke-test-sharelatex": "git+https://github.com/sharelatex/smoke-test-sharelatex.git#v1.0.0",
     "sqlite3": "~2.2.0",
     "express": "^4.2.0",
-    "body-parser": "^1.2.0"
+    "body-parser": "^1.2.0",
+    "v8-profiler": "^5.2.4"
   },
   "devDependencies": {
     "mocha": "1.10.0",
