--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "body-parser": "^1.2.0",
     "fs-extra": "^0.16.3",
     "underscore": "^1.8.2",
-    "v8-profiler": "^5.2.4"
+    "v8-profiler": "^5.2.4",
+    "heapdump": "^0.3.5"
   },
   "devDependencies": {
     "mocha": "1.10.0",
