--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "request": "~2.21.0",
     "logger-sharelatex": "git+https://github.com/sharelatex/logger-sharelatex.git#v1.0.0",
     "settings-sharelatex": "git+https://github.com/sharelatex/settings-sharelatex.git#v1.0.0",
-    "metrics-sharelatex": "git+https://github.com/sharelatex/metrics-sharelatex.git#v1.0.0",
+    "metrics-sharelatex": "git+https://github.com/sharelatex/metrics-sharelatex.git",
     "sequelize": "2.0.0-beta.2",
     "wrench": "~1.5.4",
-    "smoke-test-sharelatex": "git+https://github.com/sharelatex/smoke-test-sharelatex.git#v1.0.0",
+    "smoke-test-sharelatex": "git+https://github.com/sharelatex/smoke-test-sharelatex.git",
     "sqlite3": "~2.2.0",
     "express": "^4.2.0",
     "body-parser": "^1.2.0",
