--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sqlite3": "~2.2.0",
     "express": "^4.2.0",
     "body-parser": "^1.2.0",
+    "underscore": "^1.8.2",
     "v8-profiler": "^5.2.4",
     "heapdump": "^0.3.5"
   },
