--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "async": "0.2.9",
     "lynx": "0.0.11",
     "mkdirp": "0.3.5",
-    "mysql": "2.0.0-alpha7",
+    "mysql": "2.6.2",
     "request": "~2.21.0",
     "logger-sharelatex": "git+https://github.com/sharelatex/logger-sharelatex.git#v1.0.0",
     "settings-sharelatex": "git+https://github.com/sharelatex/settings-sharelatex.git#v1.0.0",
     "metrics-sharelatex": "git+https://github.com/sharelatex/metrics-sharelatex.git",
-    "sequelize": "2.0.0-beta.2",
+    "sequelize": "^2.1.3",
     "wrench": "~1.5.4",
     "smoke-test-sharelatex": "git+https://github.com/sharelatex/smoke-test-sharelatex.git",
     "sqlite3": "~2.2.0",
