--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lynx": "0.0.11",
     "mkdirp": "0.3.5",
     "mysql": "2.6.2",
-    "request": "~2.21.0",
+    "request": "^2.21.0",
     "logger-sharelatex": "git+https://github.com/sharelatex/logger-sharelatex.git#v1.4.0",
     "settings-sharelatex": "git+https://github.com/sharelatex/settings-sharelatex.git#v1.0.0",
     "metrics-sharelatex": "git+https://github.com/sharelatex/metrics-sharelatex.git#v1.5.0",
