use grunt to make compiles and cache dirs

--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
   "author": "James Allen <james@sharelatex.com>",
   "dependencies": {
     "async": "0.2.9",
+    "body-parser": "^1.2.0",
+    "express": "^4.2.0",
+    "fs-extra": "^0.16.3",
+    "grunt-mkdir": "^1.0.0",
+    "heapdump": "^0.3.5",
+    "logger-sharelatex": "git+https://github.com/sharelatex/logger-sharelatex.git#v1.5.4",
     "lynx": "0.0.11",
+    "metrics-sharelatex": "git+https://github.com/sharelatex/metrics-sharelatex.git#v1.5.0",
     "mkdirp": "0.3.5",
     "mysql": "2.6.2",
     "request": "^2.21.0",
-    "logger-sharelatex": "git+https://github.com/sharelatex/logger-sharelatex.git#v1.5.4",
-    "settings-sharelatex": "git+https://github.com/sharelatex/settings-sharelatex.git#v1.0.0",
-    "metrics-sharelatex": "git+https://github.com/sharelatex/metrics-sharelatex.git#v1.5.0",
     "sequelize": "^2.1.3",
-    "wrench": "~1.5.4",
+    "settings-sharelatex": "git+https://github.com/sharelatex/settings-sharelatex.git#v1.0.0",
     "smoke-test-sharelatex": "git+https://github.com/sharelatex/smoke-test-sharelatex.git#v0.2.0",
     "sqlite3": "~3.1.8",
-    "express": "^4.2.0",
-    "body-parser": "^1.2.0",
-    "fs-extra": "^0.16.3",
     "underscore": "^1.8.2",
     "v8-profiler": "^5.2.4",
-    "heapdump": "^0.3.5"
+    "wrench": "~1.5.4"
   },
   "devDependencies": {
     "mocha": "1.10.0",
