--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fs-extra": "^0.16.3",
     "grunt-mkdir": "^1.0.0",
     "heapdump": "^0.3.5",
+    "lockfile": "^1.0.3",
     "logger-sharelatex": "git+https://github.com/sharelatex/logger-sharelatex.git#v1.5.4",
     "lynx": "0.0.11",
     "metrics-sharelatex": "git+https://github.com/sharelatex/metrics-sharelatex.git#v1.5.0",
