--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,7 @@ services:
     environment:
       REDIS_HOST: redis
       MONGO_HOST: mongo
-      CLSI_HOST: clsi
     depends_on:
-      - clsi
       - redis
       - mongo
     working_dir: /app
@@ -34,18 +32,18 @@ services:
   mongo:
     image: mongo:3.4
 
-  clsi:
+  app:
     image: gcr.io/henry-terraform-admin/clsi
     build: .
     environment:
-      TEXLIVE_IMAGE: quay.io/sharelatex/texlive-small:latest
+      TEXLIVE_IMAGE: quay.io/sharelatex/texlive-full:2017.1
       TEXLIVE_IMAGE_USER: root # Not ideal, but makes running in dev very simple
       COMMAND_RUNNER: docker-runner-sharelatex
       SHARELATEX_CONFIG: /app/config/settings.defaults.coffee
       COMPILES_HOST_DIR: $PWD/compiles
     volumes:
-      - .:/app:cached
       - /var/run/docker.sock:/var/run/docker.sock
       - ./docker-runner:/app/node_modules/docker-runner-sharelatex
+      - /Users/henry/Projects/sharelatex-dev-environment/clsi/compiles:/app/compiles
     ports:
       - 3013:3013
