--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,12 @@ services:
 
   test_acceptance:
     build: .
+    volumes:
+      - .:/app
+    working_dir: /app
     extends:
-      file: base.yml
-      service: base
+      file: docker-compose-overrides.yml
+      service: dev
     environment:
       REDIS_HOST: redis
       MONGO_HOST: mongo
