--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -1,17 +1,23 @@
 # This file was auto-generated, do not edit it directly.
 # Instead run bin/update_build_scripts from
 # https://github.com/sharelatex/sharelatex-dev-environment
-# Version: 1.0.3
+# Version: 1.1.0
 
 version: "2"
 
 services:
   test_unit:
-    image: quay.io/sharelatex/$PROJECT_NAME:$BRANCH_NAME-$BUILD_NUMBER
+    image: node:6.13.0
+    volumes:
+      - .:/app
+    working_dir: /app
     entrypoint: npm run test:unit:_run
 
   test_acceptance:
-    image: quay.io/sharelatex/$PROJECT_NAME:$BRANCH_NAME-$BUILD_NUMBER
+    image: node:6.13.0
+    volumes:
+      - .:/app
+    working_dir: /app
     environment:
       REDIS_HOST: redis
       MONGO_HOST: mongo
