--- a/docker-compose-config.yml
+++ b/docker-compose-config.yml
@@ -8,6 +8,7 @@ services:
       SHARELATEX_CONFIG: /app/config/settings.defaults.coffee
       COMMAND_RUNNER: docker-runner-sharelatex
       COMPILES_HOST_DIR: $PWD/compiles
+      SYNCTEX_BIN_HOST_PATH: $PWD/bin/synctex
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./docker-runner:/app/node_modules/docker-runner-sharelatex
@@ -21,6 +22,6 @@ services:
       COMMAND_RUNNER: docker-runner-sharelatex
       COMPILES_HOST_DIR: $PWD/compiles
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock:rw
       - ./docker-runner:/app/node_modules/docker-runner-sharelatex
       - ./compiles:/app/compiles
