--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,12 +32,29 @@ services:
   synctex:
     image: quay.io/sharelatex/texlive-full:2017.1
     volumes:
-      - ~/Projects/sharelatex-dev-environment/clsi/compiles/564c29f884179:/compile
+      - ~/Projects/sharelatex-dev-environment/clsi/compiles/cd749215b3512:/compile
       - ./bin/synctex:/opt/synctex
 
-    command:
+    entrypoint: 
       /opt/synctex pdf /compile/output.pdf 1 100 200
+      # /opt/synctex code -h
+      # /opt/synctex code /compile/main.tex ./main.tex 3 5
+      # ls -al
 
+  app:
+    build: .
+    volumes:
+      - .:/app
+    working_dir: /app
+    extends:
+      file: docker-compose-config.yml
+      service: dev
+    environment:
+      REDIS_HOST: redis
+      MONGO_HOST: mongo
+    depends_on:
+      - redis
+      - mongo
 
 
   redis:
