--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -8,7 +8,8 @@ version: "2"
 services:
   test_unit:
     image: quay.io/sharelatex/$PROJECT_NAME:$BRANCH_NAME-$BUILD_NUMBER
-    command: npm run test:unit:_run
+    user: node
+    entrypoint: npm run test:unit:_run
 
   test_acceptance:
     build: .
@@ -22,7 +23,8 @@ services:
     depends_on:
       - redis
       - mongo
-    command: npm run test:acceptance:_run
+    user: node
+    entrypoint: npm run test:acceptance:_run
 
   redis:
     image: redis
