grep works with command updated build scripts acceptence tests break, files are written as root when user is node

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -8,8 +8,7 @@ version: "2"
 services:
   test_unit:
     image: quay.io/sharelatex/$PROJECT_NAME:$BRANCH_NAME-$BUILD_NUMBER
-    user: node
-    entrypoint: npm run test:unit:_run
+    command: npm run test:unit:_run
 
   test_acceptance:
     build: .
@@ -23,8 +22,7 @@ services:
     depends_on:
       - redis
       - mongo
-    user: node
-    entrypoint: npm run test:acceptance:_run
+    command: npm run test:acceptance:_run
 
   redis:
     image: redis
