--- a/docker-compose-config.yml
+++ b/docker-compose-config.yml
@@ -12,6 +12,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./compiles:/app/compiles
+      - ./cache:/app/cache
+
       
   ci:
     environment:
@@ -24,4 +26,4 @@ services:
       SQLITE_PATH: /app/compiles/db.sqlite
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:rw
-      - ./compiles:/app/compiles
+      - ./cache:/app/cache
