--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,9 @@ services:
     volumes:
       - .:/app
     working_dir: /app
-    user: node
-    entrypoint: npm run test:unit
+    environment:
+      MOCHA_GREP: ${MOCHA_GREP}
+    command: npm run test:unit
 
   test_acceptance:
     build: .
@@ -25,11 +26,12 @@ services:
     environment:
       REDIS_HOST: redis
       MONGO_HOST: mongo
-    user: node
+    environment:
+      MOCHA_GREP: ${MOCHA_GREP}
     depends_on:
       - redis
       - mongo
-    entrypoint: npm run test:acceptance
+    command: npm run test:acceptance
 
   redis:
     image: redis
