--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "compile": "npm run compile:app && npm run compile:test:acceptance && npm run compile:test:smoke", 
     "start": "npm run compile:app && node $NODE_APP_OPTIONS app.js", 
     "test:acceptance:_run": "mocha --recursive --reporter spec --timeout 15000 --exit $@ test/acceptance/js", 
-    "test:acceptance": "npm run compile:app && npm run compile:acceptance_tests && npm run test:acceptance:_run -- $@", 
+    "test:acceptance": "npm run compile:app && npm run compile:acceptance_tests && npm run test:acceptance:_run -- --grep=$MOCHA_GREP", 
     "test:unit:_run": "mocha --recursive --exit --reporter spec $@ test/unit/js", 
-    "test:unit": "npm run compile:app && npm run compile:unit_tests && npm run test:unit:_run -- $@", 
+    "test:unit": "npm run compile:app && npm run compile:unit_tests && npm run test:unit:_run  -- --grep=$MOCHA_GREP", 
     "compile:unit_tests": "[ -e test/unit ] && coffee -o test/unit/js -c test/unit/coffee || echo 'No unit tests to compile'", 
     "compile:acceptance_tests": "[ -e test/acceptance ] && coffee -o test/acceptance/js -c test/acceptance/coffee || echo 'No acceptance tests to compile'", 
     "compile:all": "npm run compile:app && npm run compile:unit_tests && npm run compile:acceptance_tests", 
