--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 # This file was auto-generated, do not edit it directly.
 # Instead run bin/update_build_scripts from
 # https://github.com/sharelatex/sharelatex-dev-environment
-# Version: 1.1.0
+# Version: 1.1.3
 
 version: "2"
 
 services:
   test_unit:
-    image: node:6.13.0
+    build: .
     volumes:
       - .:/app
     working_dir: /app
@@ -26,14 +26,15 @@ services:
     environment:
       REDIS_HOST: redis
       MONGO_HOST: mongo
+      POSTGRES_HOST: postgres
       MOCHA_GREP: ${MOCHA_GREP}
     depends_on:
-      - redis
       - mongo
+      - redis
     command: npm run test:acceptance
-
   redis:
     image: redis
 
   mongo:
     image: mongo:3.4
+
