--- a/docker-compose-config.yml
+++ b/docker-compose-config.yml
@@ -4,7 +4,7 @@ services:
   dev:
     environment:
       TEXLIVE_IMAGE: quay.io/sharelatex/texlive-full:2017.1
-      TEXLIVE_IMAGE_USER: root
+      TEXLIVE_IMAGE_USER: "tex"
       SHARELATEX_CONFIG: /app/config/settings.defaults.coffee
       DOCKER_RUNNER: "true"
       COMPILES_HOST_DIR: $PWD/compiles
@@ -18,7 +18,7 @@ services:
   ci:
     environment:
       TEXLIVE_IMAGE: quay.io/sharelatex/texlive-full:2017.1
-      TEXLIVE_IMAGE_USER: tex
+      TEXLIVE_IMAGE_USER: "tex"
       SHARELATEX_CONFIG: /app/config/settings.defaults.coffee
       DOCKER_RUNNER: "true"
       COMPILES_HOST_DIR: $PWD/compiles
@@ -27,3 +27,4 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:rw
       - ./cache:/app/cache
+      - ./compiles:/app/compiles
