--- a/package.json
+++ b/package.json
@@ -44,19 +44,19 @@
     "wrench": "~1.5.4"
   },
   "devDependencies": {
-    "mocha": "^4.0.1",
-    "coffee-script": "1.6.0",
-    "chai": "~1.8.1",
-    "sinon": "~1.7.3",
-    "grunt": "~0.4.2",
-    "grunt-contrib-coffee": "~0.7.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-shell": "~0.6.1",
-    "grunt-mocha-test": "~0.8.1",
-    "sandboxed-module": "~0.3.0",
-    "timekeeper": "0.0.4",
-    "grunt-execute": "^0.1.5",
     "bunyan": "^0.22.1",
-    "grunt-bunyan": "^0.5.0"
+    "chai": "~1.8.1",
+    "coffeescript": "^1.6.0",
+    "grunt": "~0.4.2",
+    "grunt-bunyan": "^0.5.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-execute": "^0.1.5",
+    "grunt-mocha-test": "~0.8.1",
+    "grunt-shell": "~0.6.1",
+    "mocha": "^4.0.1",
+    "sandboxed-module": "~0.3.0",
+    "sinon": "~1.7.3",
+    "timekeeper": "0.0.4"
   }
 }
