--- a/docker-compose-config.yml
+++ b/docker-compose-config.yml
@@ -26,7 +26,7 @@ services:
       SYNCTEX_BIN_HOST_PATH: $PWD/bin/synctex
       SQLITE_PATH: /app/compiles/db.sqlite
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:rw
-      - ./compiles:/app/compiles
-      - ./cache:/app/cache
-      - ./bin/synctex:/app/bin/synctex
+      - /var/run/docker.sock:/var/run/docker.sock:rw,z
+      - ./compiles:/app/compiles:z
+      - ./cache:/app/cache:z
+      - ./bin/synctex:/app/bin/synctex:z
