--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "fs-extra": "^0.16.3",
     "heapdump": "^0.3.5",
     "lockfile": "^1.0.3",
-    "logger-sharelatex": "git+https://github.com/sharelatex/logger-sharelatex.git#v1.6.0",
+    "logger-sharelatex": "^1.7.0",
     "lynx": "0.0.11",
-    "metrics-sharelatex": "git+https://github.com/sharelatex/metrics-sharelatex.git#v2.0.12",
+    "metrics-sharelatex": "^2.2.0",
     "mkdirp": "0.3.5",
     "mysql": "2.6.2",
     "request": "^2.21.0",
