--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "lynx": "0.0.11",
     "metrics-sharelatex": "^2.3.0",
     "mkdirp": "0.3.5",
-    "mysql": "2.6.2",
+    "mysql": "^2.18.1",
     "request": "^2.21.0",
-    "sequelize": "^4.38.0",
+    "sequelize": "^4.44.4",
     "settings-sharelatex": "git+https://github.com/sharelatex/settings-sharelatex.git#v1.1.0",
     "smoke-test-sharelatex": "git+https://github.com/sharelatex/smoke-test-sharelatex.git#v0.2.0",
     "sqlite3": "^4.1.1",
