--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "logger-sharelatex": "^2.2.0",
     "mysql": "^2.18.1",
     "p-limit": "^3.1.0",
+    "pdfjs-dist": "^2.7.570",
     "request": "^2.88.2",
     "sequelize": "^5.21.5",
     "settings-sharelatex": "^1.1.0",
