--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "James Allen <james@sharelatex.com>",
   "dependencies": {
     "@overleaf/metrics": "^3.5.1",
+    "@overleaf/o-error": "^3.3.1",
     "async": "3.2.0",
     "body-parser": "^1.19.0",
     "diskusage": "^1.1.3",
